Fixed vertical align on CardKive

--- a/css/project.css
+++ b/css/project.css
@@ -18,9 +18,6 @@
     height: 100%;
     vertical-align: middle;
 }
-.projectimg{
-    width: 90%;
-}
 #moreprojects{
 	background-color: white;
 }
